updating a preview ability for a ckeditor with fancybox effect

--- a/alpha/ckeditor/static/ckeditor/ckeditor/plugins/preview/preview.html
+++ b/alpha/ckeditor/static/ckeditor/ckeditor/plugins/preview/preview.html
@@ -22,23 +22,11 @@
             <div class="content-wrapper">
                 <div class="primary-content preview">
                     <div class="event-wrapper">
-                        <div class="description" id="description-container">
-                            <p>As of July 24th, 2013, the Meetup event</p>
-                            <p>description editor has been simplified so Organizers can create Meetups with a consistent look and feel</p>
-
-                            <p>&nbsp;</p>
-
-                            <p>across all platforms. Formatting options <a href="http://rambler.ru">http://rambler.ru</a> such as color and font-size have been removed, so Meetups render better on mobile devices. Meetups scheduled on the <a href="http://yandex.ru"><a href="http://yandex.ru">http://yandex.ru</a></a> calendar <a href="https://www.mail.ru">https://www.mail.ru</a> before July 24th will retain their formatting, unless edited. Past Meetups will keep their original formatting</p>
-                        </div>
+                        <div class="description" id="description-container"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        var container = document.getElementById("description-container");
-        container.innerHTML = window.opener._cke_htmlToLoad;
-        delete window.opener._cke_htmlToLoad;
-    </script>
 </body>
 </html>
