--- a/alpha/ckeditor/assets/ckeditor/ckeditor/plugins/preview/preview.html
+++ b/alpha/ckeditor/assets/ckeditor/ckeditor/plugins/preview/preview.html
@@ -6,7 +6,7 @@
     <link href="/static/styles/styles.css" rel="stylesheet" type="text/css" />
     <link href="/static/styles/styles-new.css" rel="stylesheet" type="text/css" />
     <link href="/static/styles/widgets.css" rel="stylesheet" type="text/css" />
-    <link href="/static/styles/advertising.css" rel="stylesheet" type="text/css" />
+    <link href="/static/styles/rotation.css" rel="stylesheet" type="text/css" />
     <link href="/static/fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
     <link type="text/css" href="/static/date/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
     <link href="/static/styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
